--- a/popup.html
+++ b/popup.html
@@ -1,25 +1,28 @@
 <!doctype html>
 <html>
+
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>Laranote</title>
-  <link rel="stylesheet" href="popup.css"/>
+  <link rel="stylesheet" href="popup.css" />
 </head>
+
 <body>
   <header>
-    <img class="logo" src="icons/icon32.png" alt="Laranote"/>
-    <div class="tit">Laranote</div>
+    <img class="logo" src="icons/icon32.png" alt="Laranote" />
+    <div class="tit">LaraNote</div>
   </header>
   <main id="list"></main>
   <div id="pager" class="pager"></div>
   <footer>
-  <div class="foot-left"><a id="made" href="#">Made with ❤️ by Emad Rashad</a></div>
-  <div class="foot-right">
-    <span id="verBadge" class="badge">v—</span>
-    <button id="refresh">↻</button>
-    <button id="export" style="display:none">Export JSON</button>
-  </div>
-</footer>
+    <div class="foot-left"><a id="made" href="#">Made with ❤️ by Emad Rashad</a></div>
+    <div class="foot-right">
+      <span id="verBadge" class="badge">v—</span>
+      <button id="refresh">↻</button>
+      <button id="export" style="display:none">Export JSON</button>
+    </div>
+  </footer>
   <script src="popup.js"></script>
 </body>
+
 </html>
