Adds toolbar toggle functionality
Implements a toggle to enable/disable the toolbar.

This allows users to hide the toolbar if they find it distracting.
The state of the toolbar is persisted across sessions using Chrome storage.

--- a/popup.html
+++ b/popup.html
@@ -18,8 +18,10 @@
     <div class="foot-left"><a id="made" href="#">Made with ❤️ by Emad Rashad</a></div>
     <div class="foot-right">
       <span id="verBadge" class="badge">v—</span>
+      <label class="toggle" title="Enable Toolbar"><input type="checkbox" id="toggleToolbar" /> <span id="toggleToolbarLabel">Enable Toolbar</span></label>
       <button id="refresh">↻</button>
       <button id="export" style="display:none">Export JSON</button>
+      <button id="optionsBtn" title="Options">Options</button>
     </div>
   </footer>
   <script src="popup.js"></script>
